# nodegui-plugin-qads

./: .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: setupBinary.js
src/: CDockAreaTabBar.ts  CDockAreaTitleBar.ts  CDockAreaWidget.ts  CDockContainerWidget.ts  CDockManager.ts  CDockSplitter.ts  CDockWidget.ts  CDockWidgetTab.ts  CFloatingDockContainer.ts  addon.ts  adsGlobals.ts  demo.ts  main.ts
src/cpp/: cdockareatabbar_wrap.cpp  cdockareatabbar_wrap.h  cdockareatitlebar_wrap.cpp  cdockareatitlebar_wrap.h  cdockareawidget_wrap.cpp  cdockareawidget_wrap.h  cdockcontainerwidget_macro.h  cdockcontainerwidget_wrap.cpp  cdockcontainerwidget_wrap.h  cdockmanager_wrap.cpp  cdockmanager_wrap.h  cdocksplitter_wrap.cpp  cdocksplitter_wrap.h  cdockwidget_wrap.cpp  cdockwidget_wrap.h  cdockwidgettab_wrap.cpp  cdockwidgettab_wrap.h  cfloatingdockcontainer_wrap.cpp  cfloatingdockcontainer_wrap.h  main.cpp  ncdockareatabbar.hpp  ncdockareatitlebar.hpp  ncdockareawidget.hpp  ncdockcontainerwidget.hpp  ncdockmanager.hpp  ncdockwidget.hpp  ncdockwidgettab.hpp  ncfloatingdockcontainer.hpp
